LIME2-231: Fix patient identifier sequence reset on docker restart